Fix crash if a paused download is stopped (bug 395188); patch by Mardak, r=sdwilsh, a=dsicore